--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# 本地管理文件（不应部署到线上）
+# admin.html
+
 # 系统文件
 .DS_Store
 .DS_Store?
@@ -12,10 +15,27 @@ Thumbs.db
 .idea/
 *.swp
 *.swo
+*~
 
 # 日志文件
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# 依赖目录
+node_modules/
+
+# 构建文件
+/dist/
+/build/
+
+# 环境变量文件
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # 运行时数据
 pids
@@ -24,5 +44,5 @@ pids
 *.pid.lock
 
 # 临时文件
-.tmp
-.temp 
+*.tmp
+*.temp 
